# sfguide-text-embedding-snowpark-container-service

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  requirements_all.txt  requirements_dev.txt
.github/: repo_meta.yaml
configurations/custom_library_example/: build_requirements.txt  build_script.py  embed.py  requirements.txt  walkthrough.ipynb
configurations/custom_library_example/embed_lib/: pyproject.toml
configurations/custom_library_example/libs/embed_lib/: README.md
configurations/custom_library_example/libs/embed_lib/src/embed_lib/: _batch_iter_util.py  e5.py
configurations/quickstart_example/: walkthrough.ipynb
configurations/quickstart_example/embed_lib/src/embed_lib/: e5.py
dockerfiles/: Dockerfile  Dockerfile.dockerignore
libs/buildlib/: pyproject.toml
libs/buildlib/docker/: Dockerfile
libs/buildlib/src/: buildlib.py
libs/buildlib/src/buildlib/: __init__.py
libs/lodis/: README.md  pyproject.toml
libs/lodis/src/lodis/: _constants.py  _typing.py  _utils.py  hashmap.py  librt_semaphore.py  queue.py  small_priority_queue.py
libs/lodis/test/: _utils.py  test_hashmap.py  test_librt_semaphore.py  test_priority_queue.py  test_queues_base.py
libs/multiprocess_logging/: pyproject.toml  setup.py
libs/multiprocess_logging/src/: multiprocess_logging.py
libs/multiprocess_logging/src/multiprocess_logging/: __init__.py
libs/multiprocess_logging/test/: test_basic.py
libs/service_config/: pyproject.toml
libs/service_config/src/: service_config.py
libs/simple_lru_cache/: README.md  pyproject.toml
libs/simple_lru_cache/src/: sfc_lru_cache.py
libs/simple_lru_cache/test/: test_cache.py
service_api/: api.py  embed_loop_process_manager.py  main.py  requirements.txt
service_embed_loop/: embed.py  embedding_worker.py  requirements.txt
services_common_code/: config.py  lodis_configs.py  requirements.txt
testing/perf_test_scripts/: checking_for_timeouts.py  embedding_loop_throughput.py  end_to_end_perf.py  example_text.txt  instructions.md
testing/tests/: test_end_to_end.py
