
[project]
name = "buildlib"
version = "1.0.0"
authors = [{ name = "Luke Merrick", email = "luke.merrick@snowflake.com" }]
description = "Utilities for automating service build and deploy."
requires-python = ">=3.8"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "python-on-whales>=0.64",
    "snowflake-connector-python[pandas]>=3.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"buildlib" = ["py.typed"]
