
[project]
name = "lodis"
version = "1.0.0"
authors = [
    {name = "Luke Merrick", email = "luke.merrick@snowflake.com"},
]
description = "A local dictionary server. Kinda like redis, but more local."
requires-python = ">=3.8"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy==1.24.2",
    "numba==0.57.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lodis" = ["py.typed"]
