[project]
name = "multiprocess-logging"
version = "1.0.0"
authors = [{ name = "Luke Merrick", email = "luke.merrick@snowflake.com" }]
description = "Multiprocess logging utilities for passing logs between Python processes via Lodis."
requires-python = ">=3.8"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]
