
[project]
name = "service-config"
version = "1.0.0"
authors = [{ name = "Luke Merrick", email = "luke.merrick@snowflake.com" }]
description = ""
requires-python = ">=3.8"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
