
[project]
name = "embed-lib"
version = "1.0.0"
authors = [
    {name = "Luke Merrick", email = "luke.merrick@snowflake.com"},
]
description = "Reusable project code for embedding."
requires-python = ">=3.8"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy==1.24.2",
    "torch==2.0.1",
    "tqdm==4.65.0",
    "transformers==4.30.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
